# CORA-python-bridge

./: .gitignore
nn/@neuralNetwork/: convertDLToolboxNetwork.m
python/: pyproject.toml
python/cora_python/: __init__.py  config.py  constraints.py  dynamics.py  matlab_bridge.py  types.py  verify.py
python/cora_python/_matlab/: cora_verify_helper.m
